# e_commerce

./: .coverage  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html
src/: base_order.py  base_product.py  categories.py  lawn_grass.py  main.py  order.py  print_mixin.py  product_iterator.py  products.py  smartphone.py  utils.py
tests/: conftest.py  test_categories.py  test_lawn_grass.py  test_order.py  test_print_mixin.py  test_product_iterator.py  test_products.py  test_smartphone.py
