[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
package-name = "^0.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'

[tool.coverage.report]
exclude_also = [
    "import",
    "from",
    "@abstractmethod"
]
